--- a/src/UI/src/Views/Home/Index.cshtml
+++ b/src/UI/src/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<article>
+    <header>
+        <h2>Hello, world</h2>
+        <p>Welcome to Vivendi!</p>
+    </header>
+
+    <section>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Doloremque, voluptas!
+        </p>
+    </section>
+</article>
